Lint: Lint the code